[package]
name = "tetris"
version = "0.1.0"
authors = ["Steven Tran <transtev@pdx.edu>"]
edition = "2018"

[[bin]]
name = "tetris"

[dependencies]
piston-music = "0.24.0"
rand = "0.6.5"
piston = "0.42.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"
